Teacher Onboadring process complete

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,6 +15,9 @@
 
       <ul class="navbar-nav mr-auto" *ngIf="userData.userType=='user' && teacherData.teacherType== 'principal' && userLogedIn">
         <li class="nav-item">
+          <a class="nav-link" href="/teacher-onboard">Teacher On Board</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/teacherupdate">Update Teacher</a>
         </li>
         <li class="nav-item">
