--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -108,7 +108,7 @@
         <div class="card-header clearfix">
           <h5 >Request Details</h5>
           <div class="text-right">
-            <button class="btn btn-success float-end">New Request  <i class="bi bi-plus-square"></i></button>
+            <button [routerLink]="['/teacherRequest']" class="btn btn-success float-end">New Request  <i class="bi bi-plus-square"></i></button>
           </div>
         </div>
 
