--- a/src/app/components/user-registration/user-registration.component.html
+++ b/src/app/components/user-registration/user-registration.component.html
@@ -1,11 +1,11 @@
 
 <div class="container mt-5 p-4 user-form">
   <h4 class="text-left mb-4">User Registration</h4>
-  <form [formGroup]="addUserForm" (ngSubmit)="submitUser()" class="row g-3">
+  <form #addUser="ngForm" (ngSubmit)="submitUser(addUser.value)" class="row g-3">
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">Salutation</label>
-      <select class="form-select user-form__input">
-        <option>Choose...</option>
+      <select class="form-select user-form__input" ngModel="{{userDetails.salutationId}}" name="salutationId">
+        <option value="0">Choose...</option>
         <option value="1">Mr</option>
         <option value="3">Mrs</option>
         <option value="2">Miss</option>
@@ -14,110 +14,77 @@
 
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">First Name</label>
-         <input type="text" class="form-control user-form__input" formControlName="firstName" [ngClass]="{'is-invalid': (isFormSubmitted && addUserForm.controls.firstName.errors)}">
-            <div class="invalid-feedback" *ngIf="(isFormSubmitted && addUserForm.controls.contactNumber2.errors)">
-        <div *ngIf="addUserForm.controls.firstName.errors?.required">First Name is required</div>
-      </div>
+         <input type="text" class="form-control user-form__input" ngModel="{{userDetails.firstName}}" name="firstName" >
     </div>
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">Middle Name</label>
-        <input type="text" class="form-control user-form__input" formControlName="middleName" [ngClass]="{'is-invalid': (isFormSubmitted && addUserForm.controls.middleName.errors)}">
-            <div class="invalid-feedback" *ngIf="(isFormSubmitted && addUserForm.controls.contactNumber2.errors)">
-        <div *ngIf="addUserForm.controls.middleName.errors?.required">Middle Name is required</div>
-      </div>
+        <input type="text" class="form-control user-form__input" ngModel="{{userDetails.middleName}}" name="middleName" >
     </div>
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">Last Name</label>
-        <input type="text" class="form-control user-form__input" formControlName="lastName" [ngClass]="{'is-invalid': (isFormSubmitted && addUserForm.controls.lastName.errors)}">
-            <div class="invalid-feedback" *ngIf="(isFormSubmitted && addUserForm.controls.contactNumber2.errors)">
-        <div *ngIf="addUserForm.controls.lastName.errors?.required">Last Name is required</div>
-      </div>
+        <input type="text" class="form-control user-form__input" ngModel="{{userDetails.lastName}}" name="lastName">
+            
     </div>
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">Address No</label>
-        <input type="text" class="form-control user-form__input" formControlName="addressNo" [ngClass]="{'is-invalid': (isFormSubmitted && addUserForm.controls.addressNo.errors)}">
-            <div class="invalid-feedback" *ngIf="(isFormSubmitted && addUserForm.controls.contactNumber2.errors)">
-        <div *ngIf="addUserForm.controls.addressNo.errors?.required">Address No is required</div>
-      </div>
+        <input type="text" class="form-control user-form__input" ngModel="{{userDetails.addressNo}}" name="addressNo" >
+        
     </div>
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">Street 01</label>
-        <input type="text" class="form-control user-form__input" formControlName="addressStreet" [ngClass]="{'is-invalid': (isFormSubmitted && addUserForm.controls.addressStreet.errors)}">
-            <div class="invalid-feedback" *ngIf="(isFormSubmitted && addUserForm.controls.contactNumber2.errors)">
-        <div *ngIf="addUserForm.controls.addressStreet.errors?.required">Street 01 is required</div>
-      </div>
+        <input type="text" class="form-control user-form__input" ngModel="{{userDetails.addressStreet1}}" name="addressStreet1" >
+            
     </div>
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">Street 02</label>
-        <input type="text" class="form-control user-form__input" formControlName="addressStreet2" [ngClass]="{'is-invalid': (isFormSubmitted && addUserForm.controls.addressStreet2.errors)}">
-            <div class="invalid-feedback" *ngIf="(isFormSubmitted && addUserForm.controls.contactNumber2.errors)">
-        <div *ngIf="addUserForm.controls.addressStreet2.errors?.required">Street 02 is required</div>
-      </div>
+        <input type="text" class="form-control user-form__input" ngModel="{{userDetails.addressStreet2}}" name="addressStreet2" >
+           
     </div>
 
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">City</label>
-        <ng-select ngModel="{{uRegister.cityId}}" name="cityId" required>
+        <ng-select ngModel="{{userDetails.cityId}}" name="cityId" required>
           <ng-option *ngFor="let c of cityList" [value]="c.id">{{c.name | titlecase}}</ng-option>
         </ng-select>
     </div>
 
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">Contact No 01</label>
-      <input type="text" class="form-control user-form__input" formControlName="contactNumber1" [ngClass]="{'is-invalid': (isFormSubmitted && addUserForm.controls.contactNumber1.errors)}">
-      <div class="invalid-feedback" *ngIf="(isFormSubmitted && addUserForm.controls.contactNumber2.errors)">
-        <div *ngIf="addUserForm.controls.contactNumber1.errors?.required">Contact Number 01 is required</div>
-      </div>
+      <input type="text" class="form-control user-form__input" ngModel="{{userDetails.contactNumber1}}" name="contactNumber1" >
+      
     </div>
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">Contact No 02</label>
-      <input type="text" class="form-control user-form__input" formControlName="contactNumber2" [ngClass]="{'is-invalid': (isFormSubmitted && addUserForm.controls.contactNumber2.errors)}">
-      <div class="invalid-feedback" *ngIf="(isFormSubmitted && addUserForm.controls.contactNumber2.errors)">
-        <div *ngIf="addUserForm.controls.contactNumber2.errors?.required">Contact Number 02 is required</div>
-      </div>
+      <input type="text" class="form-control user-form__input" ngModel="{{userDetails.contactNumber2}}" name="contactNumber2" >
+      
     </div>
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">NIC</label>
-      <input type="text" class="form-control user-form__input" formControlName="nic" [ngClass]="{'is-invalid': (isFormSubmitted && addUserForm.controls.nic.errors)}">
-      <div class="invalid-feedback" *ngIf="(isFormSubmitted && addUserForm.controls.nic.errors)">
-        <div *ngIf="addUserForm.controls.nic.errors?.required">NIC is required</div>
-      </div>
+      <input type="text" class="form-control user-form__input" ngModel="{{userDetails.nic}}" name="nic" required>
+      
     </div>
 
     <div class="col-md-6 mt-4">
       <label class="form-label user-form__label">Email</label>
-      <input  formControlName="email" type="email" class="form-control user-form__input" [ngClass]="{ 'is-invalid': (isFormSubmitted && addUserForm.controls.email.errors) || (!addUserForm.controls.email.pristine && addUserForm.controls.email.invalid) }">
-      <div class="invalid-feedback"
-           *ngIf="(isFormSubmitted && addUserForm.controls.email.errors) || (!addUserForm.controls.email.pristine && addUserForm.controls.email.invalid)">
-        <div *ngIf="addUserForm.controls.email.errors?.required">Email is required</div>
-        <div *ngIf="addUserForm.controls.email.errors?.pattern">Enter valid email</div>
-      </div>
-    </div>
-    <div class="col-md-6 mt-4">
-      <label class="form-label user-form__label">Password</label>
-      <input formControlName="password" type="password" class="form-control user-form__input" [ngClass]="{ 'is-invalid': (isFormSubmitted && addUserForm.controls.password.errors) || (!addUserForm.controls.password.pristine && addUserForm.controls.password.invalid) }">
-      <div class="invalid-feedback"
-           *ngIf="(isFormSubmitted && addUserForm.controls.password.errors) || (!addUserForm.controls.password.pristine && addUserForm.controls.password.invalid)">
-        <div *ngIf="addUserForm.controls.password.errors?.required">Password is required</div>
-        <div *ngIf="addUserForm.controls.password.errors?.minlength">Minimum 8 characters required</div>
-      </div>
+      <input type="email" class="form-control user-form__input" ngModel="{{userDetails.email}}" name="email" required>
+      
     </div>
 
     <div class="col-md-6 mt-4">
       <label  class="form-label user-form__label">User Type</label>
-      <ng-select ngModel="{{uRegister.userTypeId}}" name="userTypeId" required>
+      <ng-select ngModel="{{userDetails.userTypeId}}" name="userTypeId" required>
         <ng-option *ngFor="let u of userTypeList" [value]="u.id">{{u.name | titlecase}}</ng-option>
       </ng-select>
     </div>
     <div class="col-md-6 mt-4">
       <label  class="form-label user-form__label">Status</label>
-      <ng-select ngModel="{{uRegister.status}}" name="status" required>
+      <ng-select ngModel="{{userDetails.statusId}}" name="statusId" required>
         <ng-option *ngFor="let s of statusList" [value]="s.id">{{s.name | titlecase}}</ng-option>
       </ng-select>
     </div>
     <div class="col-md-6 mt-4">
       <label  class="form-label user-form__label">Gender</label>
-      <select class="form-select user-form__input" >
+      <select class="form-select user-form__input" ngModel="{{userDetails.genderId}}" name="genderId" >
         <option >Choose...</option>
         <option value="1">Male</option>
         <option value="2">Female</option>
@@ -125,19 +92,15 @@
     </div>
     <div class="col-md-6 mt-4">
       <label  class="form-label user-form__label">Marital Status</label>
-      <select class="form-select user-form__input" >
+      <select class="form-select user-form__input" ngModel="{{userDetails.maritalStatusId}}" name="maritalStatusId" >
         <option >Choose...</option>
         <option value="1">Single</option>
         <option value="2">Married</option>
       </select>
     </div>
-    <div class="col-md-6 mt-4">
-      <label class="form-label user-form__label">Profile Picture</label>
-      <input class="form-control user-form__input" type="file" id="formFile">
-    </div>
     <div class="col-12 mt-4">
       <button type="submit" class="btn btn-primary">Save</button>
-      <button type="submit" class="btn btn-secondary ms-2">Cancel</button>
+      <button type="button" class="btn btn-secondary ms-2">Cancel</button>
     </div>
   </form>
 </div>
