testing ids for selenium

--- a/src/app/components/admin-approve-request/admin-approve-request.component.html
+++ b/src/app/components/admin-approve-request/admin-approve-request.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" selenium-Id="admin-approve-request">
 <div class="row">
     <div class="col-md-6">
         <div class="card">
