--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid">
+<div class="container-fluid" selenium-Id="admin-dashboard">
     <h3 class="text-end">Welcome {{userDetails.firstName | titlecase}} !</h3>
     <h6 class="text-end" *ngFor="let p of provinceArray">{{p.name |uppercase}}</h6>
     <div class="row">
