--- a/src/app/components/approve-user-update-details/approve-user-update-details.component.html
+++ b/src/app/components/approve-user-update-details/approve-user-update-details.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" selenium-Id="approve-user-update-details">
   <div class="row">
       <div class="card">
         <h5 class="card-header">Pending Approval Details</h5>
