--- a/src/app/components/dataentry-dashboard/dataentry-dashboard.component.html
+++ b/src/app/components/dataentry-dashboard/dataentry-dashboard.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid">
+<div class="container-fluid" selenium-Id="dataentry-dashboard">
   <div class="row">
     <div class="col-md-8">
       <div class="card">
