--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 
-<main class="form-forgot-password">
+<main class="form-forgot-password" selenium-Id="forgot-password-page">
 
   <form [formGroup]="forgotPasswordForm" (ngSubmit)="forgot()" >
     <h1 class="h3 mb-3 fw-normal">Request Password Reset</h1>
