--- a/src/app/components/school-details/school-details.component.html
+++ b/src/app/components/school-details/school-details.component.html
@@ -1,7 +1,7 @@
 
 <!--  Principle Area start-->
 
-<div class="container-fluid">
+<div class="container-fluid" selenium-Id="school-details-page">
   <div class="row">
     <div class="col-md-8">
       <div class="card">
