--- a/src/app/components/teacher-registration/teacher-registration.component.html
+++ b/src/app/components/teacher-registration/teacher-registration.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 p-4 teacher-form">
+<div class="container mt-5 p-4 teacher-form" selenium-Id="teacher-registration-page">
   <h4 class="text-left mb-4">Teacher Registration</h4>
   <form #registerForm="ngForm" (ngSubmit)="submitTeacher(registerForm.value);registerForm.resetForm()" class="row g-3">
 
