--- a/src/app/components/teacher-request/teacher-request.component.html
+++ b/src/app/components/teacher-request/teacher-request.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 p-4 teacherRequest-form">
+<div class="container mt-5 p-4 teacherRequest-form" selenium-Id="teacher-request-page">
   <h4 class="text-left mb-4">Transfer Request</h4>
   <form #requestForm="ngForm" (ngSubmit)="submitRequest(requestForm.value)" class="row g-3">
 
