--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" selenium-Id="dashboard">
   <h3 class="text-end">Welcome {{userDetails.firstName | titlecase}} !</h3>
   <h5 class="text-end">{{teacherData.teacherType |uppercase}}</h5>
   <div class="row">
