--- a/src/app/components/denied/denied.component.html
+++ b/src/app/components/denied/denied.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" selenium-Id="denied-page">
     <div class="row">
       <div class="col-md-12">
         <div class="error-template">
