--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<main class="form-signin">
+<main class="form-signin" selenium-Id="login-page">
   <form [formGroup]="loginForm" (ngSubmit)="login()" >
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
