--- a/src/app/components/notfound/notfound.component.html
+++ b/src/app/components/notfound/notfound.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" selenium-Id="notfound-page">
   <div class="row">
     <div class="col-md-12">
       <div class="error-template">
