--- a/src/app/components/super-admin-approve-request/super-admin-approve-request.component.html
+++ b/src/app/components/super-admin-approve-request/super-admin-approve-request.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" selenium-Id="supper-admin-approve-request-page">
     <div class="row">
         <div class="col-md-6">
             <div class="card">
