--- a/src/app/components/super-admin-dashboard/super-admin-dashboard.component.html
+++ b/src/app/components/super-admin-dashboard/super-admin-dashboard.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid">
+<div class="container-fluid" selenium-Id="super-admin-dashboard-page">
     <h3 class="text-end">Welcome {{userDetails.firstName | titlecase}} !</h3>
     <div class="row">
         <div class="col-md-2"></div>
