--- a/src/app/components/teacher-onboard/teacher-onboard.component.html
+++ b/src/app/components/teacher-onboard/teacher-onboard.component.html
@@ -2,7 +2,7 @@
 
 <!--  Principle Area start-->
 
-<div class="container-fluid">
+<div class="container-fluid" selenium-Id="teacher-onboad-page">
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8">
