--- a/src/app/components/user-registration/user-registration.component.html
+++ b/src/app/components/user-registration/user-registration.component.html
@@ -1,5 +1,5 @@
 
-<div class="container mt-5 p-4 user-form">
+<div class="container mt-5 p-4 user-form" selenium-Id="user-registration">
   <h4 class="text-left mb-4">User Registration</h4>
   <form #addUser="ngForm" (ngSubmit)="submitUser(addUser.value)" class="row g-3">
     <div class="col-md-6 mt-4">
