--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -217,7 +217,7 @@
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                          <button type="submit" class="btn btn-warning" data-bs-dismiss="modal" >Update <i class="bi bi-trash3-fill"></i></button>
+                          <button type="submit" class="btn btn-warning" data-bs-dismiss="modal" >Update <i class="bi bi-arrow-up-short"></i></button>
                         </div>
                       </form>
                       </div>
