highlight update requet and transfer request

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -116,7 +116,7 @@
 
 <!--          update Request details start-->
           <div class="card-body">
-            <h6 class="card-header">Update Request</h6>
+            <h6 class="card-header text-white bg-primary">Update Request</h6>
 
             <table class="table">
               <thead>
@@ -166,7 +166,7 @@
 
           <!--          Transfer Request details start-->
           <div class="card-body">
-            <h6 class="card-header">Transfer Request</h6>
+            <h6 class="card-header text-white bg-primary">Transfer Request</h6>
 
             <table class="table">
               <thead>
