added leave board to principal

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,9 @@
           <a class="nav-link" href="/teacher-onboard">Teacher On Board</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/teacher-leave">Pending Teacher Transfer Request</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/teacherupdate">Update Teacher</a>
         </li>
         <li class="nav-item">
