--- a/src/app/components/super-admin-approve-request/super-admin-approve-request.component.html
+++ b/src/app/components/super-admin-approve-request/super-admin-approve-request.component.html
@@ -72,6 +72,10 @@
         <div class="col-md-6">
             <div class="card">
                 <h5 class="card-header">Suggested Schools</h5>
+                <div>
+                  <input class="form-control" type="text" [(ngModel)]="data" placeholder="Search">
+                </div>
+                <br>
                 <div class="card-body">
                     <table class="table">
                         <thead>
@@ -82,7 +86,7 @@
                         <th></th>
                         </thead>
                         <tbody>
-                          <tr *ngFor="let school of suggestedSchools">
+                          <tr *ngFor="let school of suggestedSchools | filter:data">
                             <td>{{school.schoolName |uppercase}}</td>
                             <td>{{school.schoolType |uppercase}}</td>
                             <td>{{school.slot }}</td>
