implement all school page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -46,6 +46,9 @@
 
       <ul class="navbar-nav mr-auto" *ngIf="userData.userType=='dataentry' && userLogedIn">
         <li class="nav-item">
+          <a class="nav-link" href="/schools">All Schools</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/register">Create User</a>
         </li>
         <li class="nav-item">
