--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -55,6 +55,9 @@
           <a class="nav-link" href="/schoolRegistration">School Register</a>
         </li>
         <li *ngIf="userLogedIn" class="nav-item">
+          <a class="nav-link" href="/change-password">Change Password</a>
+        </li>
+        <li *ngIf="userLogedIn" class="nav-item">
           <a class="btn btn-outline-primary my-2 my-sm-0" (click)="logout()" >Logout</a>
         </li>
       </ul>
